--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,11 @@ android {
 }
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    def paging_version = "2.1.2"
+    implementation "androidx.paging:paging-runtime:$paging_version"
     implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.hbb20:ccp:2.4.5'
     implementation platform('com.google.firebase:firebase-bom:26.5.0')
@@ -42,7 +46,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-firestore:22.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.1'
+    implementation 'com.google.firebase:firebase-storage-ktx'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     implementation'androidx.browser:browser:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
