--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     implementation 'com.google.firebase:firebase-storage-ktx'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    implementation 'com.google.android:flexbox:2.0.1'
     implementation'androidx.browser:browser:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
