--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-firestore:22.1.0'
+    implementation 'com.vanniktech:emoji-material:0.7.0'
+    implementation 'com.google.firebase:firebase-database-ktx:19.6.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.1'
     implementation 'com.google.firebase:firebase-storage-ktx'
