--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     implementation 'com.google.android:flexbox:2.0.1'
     implementation'androidx.browser:browser:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'com.google.firebase:firebase-core:18.0.3'
+    implementation 'android.arch.paging:runtime:1.0.1'
 }
