--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:22.1.2'
     implementation 'com.vanniktech:emoji-google:0.7.0'
     implementation 'com.google.firebase:firebase-database-ktx:19.7.0'
+    implementation 'com.firebaseui:firebase-ui-database:6.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.firebase:firebase-storage-ktx'
@@ -57,5 +58,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'com.google.firebase:firebase-core:18.0.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
     implementation 'android.arch.paging:runtime:1.0.1'
 }
