--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,20 +28,8 @@
         </activity>
         <activity android:name=".Activities.AfterActivity" />
         <activity android:name=".Activities.OtpActivity" />
-        <activity android:name=".Activities.Login">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".Activities.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".Activities.Login"/>
+        <activity android:name=".Activities.MainActivity"/>
     </application>
 
 </manifest>
