--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,9 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ChitChat">
-        <activity android:name=".Activities.ChatActivity">
-
-        </activity>
+        <activity
+            android:name=".Activities.SettingsActivity"
+            android:exported="false" />
+        <activity android:name=".Activities.ChatActivity"></activity>
         <activity
             android:name=".Activities.SplashActivity"
             android:theme="@style/splashTheme">
@@ -28,8 +29,8 @@
         </activity>
         <activity android:name=".Activities.AfterActivity" />
         <activity android:name=".Activities.OtpActivity" />
-        <activity android:name=".Activities.Login"/>
-        <activity android:name=".Activities.MainActivity"/>
+        <activity android:name=".Activities.Login" />
+        <activity android:name=".Activities.MainActivity" />
     </application>
 
 </manifest>
