--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition-common:+'
     def paging_version = "2.1.2"
     implementation "androidx.paging:paging-runtime:$paging_version"
     implementation 'androidx.core:core-ktx:1.3.2'
